--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
           <div class="two"><img src="images/fahim3.png" alt="">
           </div>
      </section>
+     <section class="five">
+          <div class="two">
+               <img src="images/fahim4.png" alt="">
+          </div>
+          <div class="two">
+               <h1>Dream Big</h1>
+               <h3>Become a web developer</h3>
+               <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                    how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+               <a class="three" target="blank" href="">DOWNLOAD RESUME</a>
+          </div>
+     </section>
 </body>
 
 </html>
