--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-     <section class="four">
+     <section class="four six">
           <div class="two">
                <h1>Welcome to</h1>
                <h1><span class="one">Omar Fahim</span> World</h1>
@@ -27,7 +27,7 @@
           <div class="two"><img src="images/fahim3.png" alt="">
           </div>
      </section>
-     <section class="five">
+     <section class="five six">
           <div class="two">
                <img src="images/fahim4.png" alt="">
           </div>
@@ -37,6 +37,27 @@
                <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
                     how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
                <a class="three" target="blank" href="">DOWNLOAD RESUME</a>
+          </div>
+     </section>
+     <section>
+          <h1 class="two">Experiences</h1>
+          <div class="six">
+               <div class="two">
+                    <h1>Full Stack Web Developer</h1>
+                    <h3>2021-Present | Pro Level Developer</h3>
+                    <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                         efficient. I didn't stop with the web. I went beyond with most popular Javascript framework
+                         called
+                         Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+               </div>
+               <div class="two">
+                    <h1>Baby Web Developer</h1>
+                    <h3>2021-2022 | Programming Hero Learner</h3>
+                    <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                         showed it to them. They liked it. And uploaded the content. It was fun working at Programming
+                         Hero.
+                    </p>
+               </div>
           </div>
      </section>
 </body>
