--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
           </div>
      </section>
      <section>
-          <h1 class="two">Experiences</h1>
-          <div class="six">
-               <div class="two">
-                    <h1>Full Stack Web Developer</h1>
-                    <h3>2021-Present | Pro Level Developer</h3>
+          <h1>Experiences</h1>
+          <div class="six eight">
+               <div id="one" class="seven">
+                    <h2>Full Stack Web Developer</h2>
+                    <h3 class="one">2021-Present | Pro Level Developer</h3>
                     <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
                          efficient. I didn't stop with the web. I went beyond with most popular Javascript framework
                          called
                          Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
                </div>
-               <div class="two">
-                    <h1>Baby Web Developer</h1>
-                    <h3>2021-2022 | Programming Hero Learner</h3>
+               <div id="two" class="seven">
+                    <h2>Baby Web Developer</h2>
+                    <h3 class="one">2021-2022 | Programming Hero Learner</h3>
                     <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
                          showed it to them. They liked it. And uploaded the content. It was fun working at Programming
                          Hero.
@@ -60,6 +60,9 @@
                </div>
           </div>
      </section>
+     <footer>
+          <p>© Omar Fahim 2021, Web Developer initiative.</p>
+     </footer>
 </body>
 
 </html>
